# pybadges

./: build_golden_images.py  pyproject.toml
pybadges/: __init__.py  precalculated_text_measurer.py
