[tool.poetry]
name = "pybadges"
version = "3.0.1"
description = "A library and command-line tool for generating Github-style badges"
authors = ["Brian Quinlan <brian@sweetapp.com>"]
license = "Apache-2.0"
keywords = ["github", "gh-badges", "badge", "shield", "status"]
readme = "README.md"
homepage = "https://github.com/google/pybadges"
repository = "https://github.com/google/pybadges"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.11"
Jinja2 = ">=3,<4"
requests = ">=2.22.0,<3"

[tool.poetry.group.dev.dependencies]
python = "^3.8"
flask = ">=2.0"
fonttools = ">=3.26"
nox = "*"
pillow = ">=5"
pytest = ">=3.6"
xmldiff = ">=2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
